_sass/_header.scss
.logo{
  padding-right: $space-1;
  width: 2.5rem;
  height: 2.5rem;
}

.site-title-text {
  display: inline-block;
}

.site-title-name {
  font-weight: 600;
}

.site-description {
  font-size: $base-font-size;
}

.site-header {
  padding-top: $space-1;
  padding-bottom: $space-2;
}

.site-header a {
  color: #333;
  font-size: $h2;
  font-weight: 400;
}

.site-header .site-title {
  font-size: $h3;
}

.site-nav {
  margin-top: $space-2;
}

.site-header nav a {
  color: #666;
}

.site-header nav a:hover,
.site-header nav a:focus,
.site-header nav a:active {
  color: #444;
  opacity: 1;
  border-bottom: 2px solid #444;
}

.site-nav a + a {
  margin-left: 1em;
}

.site-header a:hover,
.posts .post a:hover .post-meta,
.posts .post a:hover .post-title,
.posts .post a:hover .post-summary {
  opacity: 0.88;
}

.site-header {
  text-align: center;
}

.site-header .site-nav {
  text-align: center;
}

.social-icons .left, .social-icons .right {
  text-align: center;
  float: none;
}

